{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 47,
  "lineage": "ff1be2a6-b9d6-811e-a963-f7a79dfeb284",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f3a440bbcff3d043",
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:instance/i-09953e8c953678530",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09953e8c953678530",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0705cc132d3a6f88a",
            "private_dns": "ip-192-168-10-40.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.10.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0442d74123d78c25d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0302499dfb0061c3a",
            "tags": {
              "Name": "csk-instance"
            },
            "tags_all": {
              "Name": "csk-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d3056f8a2a892c6"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu_ami",
            "data.aws_availability_zones.region_azs",
            "module.ec2.aws_security_group.instance_sg",
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_route_association",
            "module.vpc.aws_route_table_association.public_subnet_route_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f3a440bbcff3d043",
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:instance/i-089c4c194e39b911b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089c4c194e39b911b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05ee88313a10ea99c",
            "private_dns": "ip-192-168-11-122.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.11.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea231b9ef3ed2d6d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e93ee46172f3274b",
            "tags": {
              "Name": "csk-instance"
            },
            "tags_all": {
              "Name": "csk-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d3056f8a2a892c6"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu_ami",
            "data.aws_availability_zones.region_azs",
            "module.ec2.aws_security_group.instance_sg",
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_route_association",
            "module.vpc.aws_route_table_association.public_subnet_route_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:security-group/sg-00d3056f8a2a892c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d3056f8a2a892c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240103084452249100000003",
            "name_prefix": "terraform-",
            "owner_id": "351377430522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "csk-instance-sg"
            },
            "tags_all": {
              "Name": "csk-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce70fe03028aea25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.region_azs",
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_subnet_route_association",
            "module.vpc.aws_route_table_association.public_subnet_route_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0956f643aa263567f",
            "domain": "vpc",
            "id": "eipalloc-0956f643aa263567f",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-39-52-185.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.52.185",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e62cb7b461c05ca3",
            "domain": "vpc",
            "id": "eipalloc-0e62cb7b461c05ca3",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-39-36-168.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.36.168",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:internet-gateway/igw-0cfca589760aed440",
            "id": "igw-0cfca589760aed440",
            "owner_id": "351377430522",
            "tags": {
              "Name": "csk-vpc-igw"
            },
            "tags_all": {
              "Name": "csk-vpc-igw"
            },
            "vpc_id": "vpc-0ce70fe03028aea25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0956f643aa263567f",
            "association_id": "eipassoc-0a085d67a4af7ad37",
            "connectivity_type": "public",
            "id": "nat-014f9d1d62d7a96ba",
            "network_interface_id": "eni-0ad923710fb33c6d5",
            "private_ip": "192.168.0.89",
            "public_ip": "3.39.52.185",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03fe232009a09262e",
            "tags": {
              "Name": "csk-vpc-nat-gateway-a"
            },
            "tags_all": {
              "Name": "csk-vpc-nat-gateway-a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.region_azs",
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e62cb7b461c05ca3",
            "association_id": "eipassoc-0fd9e1f899a6252cf",
            "connectivity_type": "public",
            "id": "nat-08c9470a6e3416332",
            "network_interface_id": "eni-0233270813ae5cee7",
            "private_ip": "192.168.1.250",
            "public_ip": "3.39.36.168",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0265d8b066cb4e1c6",
            "tags": {
              "Name": "csk-vpc-nat-gateway-b"
            },
            "tags_all": {
              "Name": "csk-vpc-nat-gateway-b"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.region_azs",
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:route-table/rtb-0412cfa26bf54e31c",
            "id": "rtb-0412cfa26bf54e31c",
            "owner_id": "351377430522",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-014f9d1d62d7a96ba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "csk-vpc-private-route-table-a"
            },
            "tags_all": {
              "Name": "csk-vpc-private-route-table-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce70fe03028aea25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.region_azs",
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:route-table/rtb-01d95a232d7ed9f2a",
            "id": "rtb-01d95a232d7ed9f2a",
            "owner_id": "351377430522",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08c9470a6e3416332",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "csk-vpc-private-route-table-b"
            },
            "tags_all": {
              "Name": "csk-vpc-private-route-table-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce70fe03028aea25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.region_azs",
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:route-table/rtb-06d65882c35bf0ce3",
            "id": "rtb-06d65882c35bf0ce3",
            "owner_id": "351377430522",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cfca589760aed440",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "csk-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "csk-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce70fe03028aea25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fe355a42e52e75b",
            "route_table_id": "rtb-0412cfa26bf54e31c",
            "subnet_id": "subnet-0302499dfb0061c3a"
          },
          "dependencies": [
            "data.aws_availability_zones.region_azs",
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c59dc2e3fe7f86de",
            "route_table_id": "rtb-01d95a232d7ed9f2a",
            "subnet_id": "subnet-0e93ee46172f3274b"
          },
          "dependencies": [
            "data.aws_availability_zones.region_azs",
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f950220f23b96e6c",
            "route_table_id": "rtb-06d65882c35bf0ce3",
            "subnet_id": "subnet-03fe232009a09262e"
          },
          "dependencies": [
            "data.aws_availability_zones.region_azs",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a264764f77b8bd9a",
            "route_table_id": "rtb-06d65882c35bf0ce3",
            "subnet_id": "subnet-0265d8b066cb4e1c6"
          },
          "dependencies": [
            "data.aws_availability_zones.region_azs",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.pubilc_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:subnet/subnet-0302499dfb0061c3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0302499dfb0061c3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351377430522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csk-vpc-private-subnet-a"
            },
            "tags_all": {
              "Name": "csk-vpc-private-subnet-a"
            },
            "vpc_id": "vpc-0ce70fe03028aea25"
          },
          "dependencies": [
            "data.aws_availability_zones.region_azs",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:subnet/subnet-0e93ee46172f3274b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e93ee46172f3274b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351377430522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csk-vpc-private-subnet-b"
            },
            "tags_all": {
              "Name": "csk-vpc-private-subnet-b"
            },
            "vpc_id": "vpc-0ce70fe03028aea25"
          },
          "dependencies": [
            "data.aws_availability_zones.region_azs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubilc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:subnet/subnet-03fe232009a09262e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fe232009a09262e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "351377430522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csk-vpc-public-subnet-a"
            },
            "tags_all": {
              "Name": "csk-vpc-public-subnet-a"
            },
            "vpc_id": "vpc-0ce70fe03028aea25"
          },
          "dependencies": [
            "data.aws_availability_zones.region_azs",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:subnet/subnet-0265d8b066cb4e1c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0265d8b066cb4e1c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "351377430522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csk-vpc-public-subnet-b"
            },
            "tags_all": {
              "Name": "csk-vpc-public-subnet-b"
            },
            "vpc_id": "vpc-0ce70fe03028aea25"
          },
          "dependencies": [
            "data.aws_availability_zones.region_azs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:351377430522:vpc/vpc-0ce70fe03028aea25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0a6a72cd006f19ad8",
            "default_route_table_id": "rtb-0ffcb986a7d4841fd",
            "default_security_group_id": "sg-043df8c031121c0d5",
            "dhcp_options_id": "dopt-0b6829d2ac56644f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce70fe03028aea25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffcb986a7d4841fd",
            "owner_id": "351377430522",
            "tags": {
              "Name": "csk-vpc"
            },
            "tags_all": {
              "Name": "csk-vpc"
            }
          }
        }
      ]
    }
  ]
}